applications/getting-started-async/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getting-started-async-deployment
  labels:
    app: getting-started-async
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getting-started-async
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: getting-started-async
    spec:
      containers:
      - name: getting-started-async
        image: "ghcr.io/getting-started-async"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080

        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 64Mi
        imagePullSecrets:
        - ghcrcreds
