applications/getting-started-async/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getting-started-async-service
  labels:
    app: getting-started-async
    service: getting-started-async-service
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: getting-started-async
